# docglow

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  demo-site.yml
docs/: cloud.md  column-lineage.md  compatibility.md  index.md  launch-templates.md  migrating-from-dbt-docs.md  plan-column-level-lineage.md  plan-lineage-folder-aggregation.md  plan-lineage-performance.md  plan-lineage-react-flow.md  plan-remaining-features.md  plan-round2-adoption-polish.md  prd-initial-structure.md  prd-naming-update.md  prd-prep-for-cloud.md
docs/ci-examples/: github-actions-health-check.yml  github-actions-pages.yml  github-actions-s3.yml
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: accessibility.spec.ts  favicon.spec.ts  health.spec.ts  lineage.spec.ts  model-page.spec.ts  navigation.spec.ts  overview.spec.ts  responsive.spec.ts  search.spec.ts  source-page.spec.ts  theme.spec.ts
frontend/e2e/fixtures/: docglow-data.json
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: lineageFilters.test.ts
frontend/src/components/: Markdown.tsx
frontend/src/hooks/: useLineage.ts
frontend/src/pages/: HealthPage.tsx  LineagePage.tsx  ModelPage.tsx  Overview.tsx  SearchPage.tsx  SourcePage.tsx
frontend/src/stores/: chatStore.ts  columnHighlightStore.ts  projectStore.ts  searchStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: colors.ts  columnLineageGraph.ts  dbtSelect.ts  formatting.ts  graph.ts  graphTraversal.ts  lineageAggregation.ts  lineageFilters.ts  modelColumns.ts
scripts/: bench_search.mjs  build_frontend.py  generate_synthetic_catalog.py  resolve_refs.py
src/docglow/: __init__.py  cli.py  config.py
src/docglow/ai/: __init__.py  context.py  prompts.py
src/docglow/analyzer/: __init__.py  complexity.py  coverage.py  health.py  naming.py
src/docglow/artifacts/: __init__.py  catalog.py  loader.py  manifest.py
src/docglow/cloud/: __init__.py  auth.py  client.py  config.py  publish.py
src/docglow/commands/: cloud.py  generate.py  health.py  init.py  mcp.py  profile.py  publish.py  serve.py
src/docglow/generator/: bundle.py  data.py  filters.py  layers.py  lineage_builder.py  pipeline.py  search_index.py  site.py
src/docglow/lineage/: __init__.py  analyzer.py  column_parser.py  macro_expander.py  table_resolver.py
src/docglow/mcp/: server.py  tools.py  transport.py
src/docglow/profiler/: __init__.py  cache.py  engine.py  queries.py  stats.py
src/docglow/server/: dev.py  watcher.py
src/docglow/static/: .gitignore  index.html
src/docs_plus_plus/: __init__.py  cli.py  config.py
src/docs_plus_plus/ai/: __init__.py  context.py
tests/: conftest.py  test_ai.py  test_byok.py  test_cli_fail_under.py  test_cli_health_markdown.py  test_cli_init.py  test_cli_warnings.py  test_config.py  test_data_transformer.py  test_generator.py  test_health.py  test_loader.py  test_profiler.py  test_profiler_histogram.py  test_profiler_integration.py  test_search_index.py  test_watcher.py
tests/fixtures/: catalog.json  manifest.json  run_results.json
tests/lineage/: test_column_parser.py  test_table_resolver.py
(+48 files in other folders)
