[project]
name = "docs-plus-plus"
version = "0.1.0"
description = "Next-generation dbt documentation site generator"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Josh" },
]
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "rich>=13.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
profiling = [
    "sqlalchemy>=2.0",
    "duckdb-engine>=0.11",
]
ai = [
    "anthropic>=0.40",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.10",
]

[project.scripts]
docs-plus-plus = "docs_plus_plus.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docs_plus_plus"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

[tool.mypy]
python_version = "3.10"
strict = true
