[project]
name = "docglow"
dynamic = ["version"]
description = "Next-generation dbt documentation site generator"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Josh" },
]
keywords = [
    "dbt",
    "dbt-core",
    "documentation",
    "data-catalog",
    "data-documentation",
    "lineage",
    "analytics-engineering",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "rich>=13.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
profiling = [
    "sqlalchemy>=2.0",
    "duckdb-engine>=0.11",
]
ai = [
    "anthropic>=0.40",
]
cloud = [
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.10",
]

[project.scripts]
docglow = "docglow.cli:cli"

[project.urls]
Homepage = "https://github.com/docglow/docglow"
Documentation = "https://github.com/docglow/docglow#readme"
Repository = "https://github.com/docglow/docglow"
Changelog = "https://github.com/docglow/docglow/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/docglow/docglow/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/docglow/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["src/docglow"]

[tool.hatch.build.targets.wheel]
packages = ["src/docglow"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

[tool.mypy]
python_version = "3.10"
strict = true
